Fix chartOptionsContainer alignment
“Metrics Chart Type: “ and the following `<label>` tags were
mis-aligned, just axed the margin.

--- a/src/clientFilePage/analysisTab.styl
+++ b/src/clientFilePage/analysisTab.styl
@@ -227,6 +227,8 @@
 
 									&:hover
 										stroke #1d6977
+
+
 			.chartOptionsContainer
 				display flex
 				justify-content space-between
@@ -237,6 +239,7 @@
 					align-items center
 
 					label
+						margin 0
 						padding-left 10px
 						padding-right 2px
 
